--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -3,6 +3,11 @@
     android:layout_height="match_parent" android:background="#0099cc" android:keepScreenOn="true"
     tools:context=".FullscreenActivity">
 
-
+    <FrameLayout
+        android:id="@+id/camera_preview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        />
 
 </FrameLayout>
