--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -7,6 +7,13 @@
         android:id="@+id/camera_preview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:visibility="invisible"
+        android:layout_weight="1"
+        />
+    <FrameLayout
+        android:id="@+id/lizun_preview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         />
 
