--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,20 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#0099cc" android:keepScreenOn="true"
     tools:context=".FullscreenActivity">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/camera_preview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:visibility="invisible"
-        android:layout_weight="1"
+        android:layout_width="1280px"
+        android:layout_height="960px"
         />
-    <FrameLayout
+
+    <RelativeLayout
         android:id="@+id/lizun_preview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
         />
 
-</FrameLayout>
+</RelativeLayout>
