--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/lol" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/startActivity" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#0099cc" android:keepScreenOn="true"
     tools:context=".FullscreenActivity">
 
