--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/startActivity" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#0099cc" android:keepScreenOn="true"
-    tools:context=".FullscreenActivity">
-
-
-
+xmlns:tools="http://schemas.android.com/tools" android:layout_width="1280px"
+android:layout_height="800px" tools:context=".FullscreenActivity"
+android:id="@+id/startActivity" android:keepScreenOn="true">
+    <RelativeLayout android:layout_width="1280px"
+        android:layout_height="800px" tools:context=".FullscreenActivity"
+        android:id="@+id/lizun" />
 </RelativeLayout>
