--- a/app/src/main/res/anim/wall_hit_charge.xml
+++ b/app/src/main/res/anim/wall_hit_charge.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:oneshot="true">
   <item android:drawable="@drawable/slimer_def" android:duration="40"/>
   <item android:drawable="@drawable/hit_side0002" android:duration="40"/>
   <item android:drawable="@drawable/hit_side0003" android:duration="40"/>
-  <item android:drawable="@drawable/hit_side0004" android:duration="4000"/>
+  <item android:drawable="@drawable/hit_side0004" android:duration="40"/>
 </animation-list>
